# telegrambot_transcriber

./: .dockerignore  .gitignore  .hadolint.yml  .pre-commit-config.yaml  .tool-versions  Cargo.toml  Dockerfile  Justfile  Makefile  compose.yaml  docker-compose.yml  mypy.ini  package.json  pnpm-lock.yaml  pyproject.toml  renovate.json
.github/workflows/: main.yml  pull_request.yml
src/: main.rs
src/transcriber_telegrambot/: __main__.py  main.py
src/transcription/: transcript.rs
