[package]
name = "transcriber_telegrambot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "transcriber_telegrambot"

[dependencies]
color-eyre = "0.6.3"
log = "0.4.21"
pretty_env_logger = "0.5.0"
teloxide = { version = "0.12", features = ["macros", "webhooks-axum"] }
tokio = { version = "1.37", features = [
    "rt-multi-thread",
    "macros",
    "process",
] }
url = "2.5.0"
