[package]
name = "transcriber_telegrambot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "transcriber_telegrambot"

[dependencies]
color-eyre = "0.6.3"
hound = "3.5.1"
log = "0.4.21"
pretty_env_logger = "0.5.0"
rust-embed = "8.3.0"
teloxide = { version = "0.12", features = ["macros", "webhooks-axum"] }
tokio = { version = "1.37", features = [
    "rt-multi-thread",
    "macros",
    "process",
] }
url = "2.5.0"
vosk = { git = "https://github.com/Bear-03/vosk-rs" }
