[project]
name = "transcriber-telegrambot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.7.0",
    "asyncio>=3.4.3",
    "ffmpeg-python>=0.2.0",
    "loguru>=0.7.3",
    "prometheus-client>=0.21.1",
    "pydub>=0.25.1",
    "python-telegram-bot>=21.9",
    "vosk>=0.3.45",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["mypy>=1.14.1", "ruff>=0.8.4"]


[project.scripts]
transcriber-telegrambot = "transcriber_telegrambot:main"
