[project]
name = "transcriber-telegrambot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.13"
dependencies = [
  "aiofiles>=25.1.0",
  "anyio>=4.7.0",
  "asyncio>=3.4.3",
  "ffmpeg-python>=0.2.0",
  "loguru>=0.7.3",
  "prometheus-client>=0.21.1",
  "pydub>=0.25.1",
  "python-telegram-bot>=21.9",
  "vosk>=0.3.44",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project.scripts]
transcriber-telegrambot = "transcriber_telegrambot:main"

[tool.uv]
required-environments = [
  "sys_platform == 'darwin' and platform_machine == 'arm64'",
  "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[dependency-groups]
dev = ["bandit>=1.9.4", "ruff>=0.15.16", "ty>=0.0.47"]
